create endpoints for bidding system, enhance the response with the car details