@@ -4,15 +4,15 @@ import com.auctions.hunters.exceptions.*;
 import com.auctions.hunters.model.Auction;
 import com.auctions.hunters.model.Car;
 import com.auctions.hunters.model.Image;
-import com.auctions.hunters.repository.CarRepository;
 import com.auctions.hunters.service.auction.AuctionService;
+import com.auctions.hunters.service.bid.BidService;
 import com.auctions.hunters.service.car.CarService;
 import com.auctions.hunters.service.car.SearchCriteria;
 import com.auctions.hunters.service.image.ImageService;
+import com.auctions.hunters.service.user.UserService;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -28,25 +28,28 @@ import java.util.stream.IntStream;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
+@Slf4j
 @Validated
 @Controller
-@Slf4j
 @RequestMapping(produces = APPLICATION_JSON_VALUE)
 public class CarController {
 
     private final CarService carService;
-    private final CarRepository carRepository;
     private final ImageService imageService;
     private final AuctionService auctionService;
+    private final UserService userService;
+    private final BidService bidService;
 
     public CarController(CarService carService,
-                         CarRepository carRepository,
                          ImageService imageService,
-                         AuctionService auctionService) {
+                         AuctionService auctionService,
+                         UserService userService,
+                         BidService bidService) {
         this.carService = carService;
-        this.carRepository = carRepository;
         this.imageService = imageService;
         this.auctionService = auctionService;
+        this.userService = userService;
+        this.bidService = bidService;
     }
 
     @GetMapping("/car/add")
@@ -83,49 +86,52 @@ public class CarController {
             @RequestParam(value = "maxPrice", required = false) Integer maxPrice,
             Model modelAtr) {
 
-        SearchCriteria searchCriteria = new SearchCriteria();
-        Specification<Car> carSpecification = searchCriteria.buildSpec(producer, model, minYear, maxYear, minPrice, maxPrice);
+        CarsListPaginator pager = (page1, producer1, model1, minYear1, maxYear1, minPrice1, maxPrice1, modelAtr1) -> {
+            String loggedUsername = userService.getLoggedUsername();
 
-        Page<Car> carPage = getCarPage(page, carSpecification);
-        modelAtr.addAttribute("carPage", carPage);
-        modelAtr.addAttribute("currentPage", page);
+            SearchCriteria searchCriteria = new SearchCriteria();
+            Specification<Car> carSpecification = searchCriteria.buildSpec(producer1, model1, minYear1, maxYear1, minPrice1, maxPrice1);
 
-        List<Float> auctionsMinimumPriceList = setMinimumPriceForEachCar(carPage);
+            Page<Car> carPage = carService.getCarPage(page1, carSpecification);
+            int totalPages = carPage.getTotalPages();
 
-        int totalPages = carPage.getTotalPages();
-        if (totalPages > 0) {
-            List<Integer> pageNumbers = IntStream.rangeClosed(0, totalPages - 1)
-                    .boxed()
-                    .toList();
-            modelAtr.addAttribute("pageNumbers", pageNumbers);
-            modelAtr.addAttribute("auctionsMinimumPriceList", auctionsMinimumPriceList);
-        } else {
-            modelAtr.addAttribute("pageNumbers", null);
-            modelAtr.addAttribute("emptyMessage", "There are no cars to display.");
-            return "/no_car";
-        }
+            if (totalPages > 0) {
+                List<Integer> pageNumbers = IntStream.rangeClosed(0, totalPages - 1)
+                        .boxed()
+                        .toList();
 
-        return "/car_list";
+                List<Car> authenticatedUserCarsList = getAuthenticatedUserCarsList(loggedUsername, carPage);
+
+                List<Float> auctionsMinimumPriceList = auctionService.setMinimumPriceForEachPageCar(carPage);
+
+                modelAtr1.addAttribute("carPage", carPage);
+                modelAtr1.addAttribute("currentPage", page1);
+                modelAtr1.addAttribute("pageNumbers", pageNumbers);
+                modelAtr1.addAttribute("auctionsMinimumPriceList", auctionsMinimumPriceList);
+                modelAtr1.addAttribute("authenticatedUserCarsListSize",  authenticatedUserCarsList.size());
+            }
+
+            return "/car_list";
+        };
+
+        return pager.createPaginationListForCars(page, producer, model, minYear, maxYear, minPrice, maxPrice, modelAtr);
     }
 
+    /**
+     * Map all the cars from a page and return all cars which username matches the authenticated username.
+     */
     @NotNull
-    private List<Float> setMinimumPriceForEachCar(Page<Car> carPage) {
-        List<Float> auctionsMinimumPriceList = new ArrayList<>();
-        List<Car> content = carPage.getContent();
-        for (Car car : content) {
-            Auction auction = auctionService.getAuctionByCarId(car.getId());
+    private static List<Car> getAuthenticatedUserCarsList(String loggedUsername, Page<Car> carPage) {
+        List<Car> allCarsList = carPage.getContent();
+        List<Car> authenticatedUserCarsList = new ArrayList<>();
 
-            if (auction != null) {
-                auctionsMinimumPriceList.add(auction.getMinimumPrice());
+        for(Car car : allCarsList) {
+            if(car.getUser().getUsername().equals(loggedUsername)) {
+                authenticatedUserCarsList.add(car);
             }
         }
-        return auctionsMinimumPriceList;
-    }
 
-    @NotNull
-    private Page<Car> getCarPage(int page, Specification<Car> spec) {
-        int pageSize = 10; // number of elements in a page
-        return carRepository.findAll(spec, PageRequest.of(page, pageSize));
+        return authenticatedUserCarsList;
     }
 
     @GetMapping("/cars/{id}")
@@ -148,11 +154,36 @@ public class CarController {
         List<Image> images = imageService.findAllImagesByCarId(id);
         List<String> base64Images = images.stream()
                 .map(image -> Base64.getEncoder().encodeToString(image.getData()))
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("images", base64Images);
         model.addAttribute("contentTypes", images.stream().map(Image::getContentType).collect(Collectors.toList()));
 
         return "/view_car";
+    }
+
+    @GetMapping("/bid/car/{id}")
+    public String getAuctionedCar(@PathVariable Integer id, Model model) {
+        Car car = carService.getCarById(id);
+        model.addAttribute("car", car);
+
+        List<Image> images = imageService.findAllImagesByCarId(id);
+        List<String> base64Images = images.stream()
+                .map(image -> Base64.getEncoder().encodeToString(image.getData()))
+                .toList();
+
+        model.addAttribute("images", base64Images);
+        model.addAttribute("contentTypes", images.stream().map(Image::getContentType).collect(Collectors.toList()));
+
+        return "/view_auctioned_car";
+    }
+
+    @PostMapping("/bid/car/{carId}")
+    public String createNewBid( @PathVariable Integer carId, @RequestParam("bidAmount") Integer bidAmount) {
+        Auction auction = auctionService.getAuctionByCarId(carId);
+        bidService.save(bidAmount, auction);
+
+        log.info("Bidul este {}", bidAmount);
+        return "redirect:/auctions"; //redirect to the auctions endpoint
     }
 }
